# social-media-nlp

./: .gitignore  pyproject.toml  settings.json
social_media_nlp/connection/: twitter_connection.py
social_media_nlp/pipeline/: __main__.py
social_media_nlp/pipeline/extract/: base_extractor.py  twitter_extractor.py
social_media_nlp/script/: load_config.py
social_media_nlp/test/: test_load_config.py  test_twitter_connection.py
