[project]
name = "social-media-nlp"
version = "0.0.1"
description = "This project has the objetive to analyze sentiments in social media after influencers interacion"
authors = [
    {name = "Luiz Eduardo Malanczyn de Oliveira"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "tweepy (>=4.15.0,<5.0.0)",
    "snowflake-connector-python (>=3.14.0,<4.0.0)",
    "apache-airflow (>=2.10.5,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
