[tool.poetry]
name = "social_media_nlp"
version = "0.0.1"
description = "This project has the objective to analyze sentiments in social media after influencers' interaction"
authors = ["Luiz Eduardo Malanczyn de Oliveira"]
readme = "README.md"
packages = [{ include = "social_media_nlp" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
pandas = "^2.2.3"
tweepy = "^4.15.0"
snowflake-connector-python = "^3.14.0"
prefect = "^3.3.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
